# mainframe-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  config.example.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yml
configs/: cpu-only.json  gpu-light.json  gpu-max.json  gpu-minimal.json
docs/: MAINFRAME_QUERY.md
eval/: README.md  backfill.py  evaluate.py  history.py  program.md  results.template.md  sweep_raptor.py  test_queries.example.json
scripts/: publish_mirror.sh
skills/mainframe-retrieval/: SKILL.md
src/mainframe_mcp/: __init__.py  chunker.py  config.py  consolidator.py  contextualizer.py  dedup.py  embedder.py  manifest.py  nli.py  raptor.py  reranker.py  scanner.py  secrets.py  server.py  session_capture.py  store.py  watcher.py
tests/: conftest.py  test_agent_ux.py  test_capture_memory.py  test_capture_session_hook.py  test_codereview_fixes.py  test_codereview_fixes2.py  test_consolidate.py  test_consolidator_prompt.py  test_contextual.py  test_dedup_donor.py  test_delete_manifest.py  test_embedder.py  test_index_health.py  test_mcp_ergonomics.py  test_memory_loop.py  test_ops_resilience.py  test_raptor_exclusion.py  test_reranker_backend.py  test_scanner.py  test_search_filter.py  test_secrets.py  test_source_type.py  test_sync_index.py  test_temporal_consolidation.py  test_tier0_hardening.py
